---
title: Sacred Geometry-Inspired ER Diagram for Avolve
description: Visualizes the Avolve schema using sacred geometry and color-coded tokens.
---

%% Mermaid.js ER Diagram using sacred geometry principles
%% Color codes and shapes reflect token hierarchy and value pillars

erDiagram
    PROFILES ||--o{ METRICS : records
    PROFILES ||--o{ TOKENS : owns
    TOKENS }o--|| TOKEN_TYPE : type
    METRICS }o--|| METRIC_TYPE : type
    TOKENS }o--|| USER_ROLE : role
    TEAM_TOKENS }o--|| TOKEN_TYPE : type
    USER_ROLE_ACTIVITY }o--|| USER_ROLE : role
    TEAM_TOKENS ||--o{ TEAMS : belongs_to
    TEAM_TOKENS ||--o{ TOKENS : aggregates
    USER_ROLE_ACTIVITY ||--o{ PROFILES : performed_by
    METRICS ||--o{ EVENTS : logs

    %% Sacred geometry overlay: imagine circles and triangles connecting GEN, SAP, SCQ at the center, with sub-tokens as radiating spokes.
    %% Color code: GEN (gray), SAP (stone), SCQ (slate), PSP (amber), BSP (teal), SMS (violet), SPD (rgb), SHE (rose), SSA (emerald), SBG (indigo)

    %% Add legend in docs/schema.md for color associations.
